<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/profile_icon"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/terms_condition"
            android:icon="@drawable/terms_condition_icon"
            android:title="@string/terms_condition" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/logout" />
    </group>
</menu>