<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ahmedkenawy.cfhtest.ui.main.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/profile"
        android:name="com.ahmedkenawy.cfhtest.ui.main.profile.ProfileFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/terms_condition"
        android:name="com.ahmedkenawy.cfhtest.ui.main.terms_conditions.TermsConditionsFragment"
        android:label="@string/terms_condition"
        tools:layout="@layout/fragment_term_conditions" />

</navigation>