<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ahmedkenawy.cfhtest.ui.auth.sign_up.SignUpViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.sign_in.SignInFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstNameInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:hint="@string/first_name"
                    app:error="@{viewModel.firstNameError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etFirstNameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:inputType="text"
                        android:text="@={viewModel.firstName}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastNameInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/last_name"
                    app:error="@{viewModel.lastNameError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLastNameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:inputType="text"
                        android:text="@={viewModel.lastName}" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ageInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:hint="@string/age"
                app:error="@{viewModel.ageError}"
                app:layout_constraintEnd_toEndOf="@+id/linearLayoutCompat"
                app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAgeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:inputType="number"
                    android:text="@={viewModel.age}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:hint="@string/email"
                app:error="@{viewModel.emailError}"
                app:layout_constraintEnd_toEndOf="@+id/linearLayoutCompat"
                app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat"
                app:layout_constraintTop_toBottomOf="@+id/ageInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:hint="@string/password"
                app:error="@{viewModel.passwordError}"
                app:layout_constraintEnd_toEndOf="@+id/emailInputLayout"
                app:layout_constraintStart_toStartOf="@+id/emailInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/emailInputLayout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:inputType="text"
                    android:text="@={viewModel.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/teal_700"
                android:onClick="@{() -> viewModel.validateAndRegister()}"
                android:paddingVertical="19dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/emailInputLayout"
                app:layout_constraintStart_toStartOf="@+id/emailInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

            <TextView
                android:id="@+id/tv_sing_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/already_have_an_account_sign_in"
                app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/btnSignUp"
                app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
